--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -22,7 +22,7 @@ body {
     margin: 10px;
 }
 
-.current-weather {
+.currentWeather-outputs {
     display: block;
     text-align: center;
     justify-content: center;
